--- a/output.css
+++ b/output.css
@@ -591,6 +591,14 @@ video {
   right: 2.5rem;
 }
 
+.right-5 {
+  right: 1.25rem;
+}
+
+.right-3 {
+  right: 0.75rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -685,6 +693,22 @@ video {
 
 .h-2\/3 {
   height: 66.666667%;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-2\/5 {
+  height: 40%;
+}
+
+.h-2\/6 {
+  height: 33.333333%;
+}
+
+.h-3\/6 {
+  height: 50%;
 }
 
 .w-full {
@@ -923,6 +947,10 @@ video {
 .py-40 {
   padding-top: 10rem;
   padding-bottom: 10rem;
+}
+
+.pr-8 {
+  padding-right: 2rem;
 }
 
 .text-center {
@@ -1175,6 +1203,18 @@ video {
 
   .lg\:left-5 {
     left: 1.25rem;
+  }
+
+  .lg\:right-0 {
+    right: 0px;
+  }
+
+  .lg\:right-3 {
+    right: 0.75rem;
+  }
+
+  .lg\:left-3 {
+    left: 0.75rem;
   }
 
   .lg\:block {
