--- a/output.css
+++ b/output.css
@@ -591,14 +591,6 @@ video {
   right: 2.5rem;
 }
 
-.right-5 {
-  right: 1.25rem;
-}
-
-.right-3 {
-  right: 0.75rem;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -658,8 +650,8 @@ video {
   height: 0px;
 }
 
-.h-5\/6 {
-  height: 83.333333%;
+.h-3\/6 {
+  height: 50%;
 }
 
 .h-big {
@@ -675,40 +667,16 @@ video {
   height: 25%;
 }
 
-.h-full {
-  height: 100%;
+.h-2\/5 {
+  height: 40%;
 }
 
 .h-2 {
   height: 0.5rem;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
-.h-auto {
-  height: auto;
-}
-
-.h-2\/3 {
-  height: 66.666667%;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-2\/5 {
-  height: 40%;
-}
-
-.h-2\/6 {
-  height: 33.333333%;
-}
-
-.h-3\/6 {
-  height: 50%;
+.h-full {
+  height: 100%;
 }
 
 .w-full {
@@ -830,16 +798,12 @@ video {
   overflow: hidden;
 }
 
-.overflow-clip {
-  overflow: clip;
-}
-
-.overflow-visible {
-  overflow: visible;
-}
-
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 
 .rounded-md {
@@ -949,10 +913,6 @@ video {
   padding-bottom: 10rem;
 }
 
-.pr-8 {
-  padding-right: 2rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1044,12 +1004,6 @@ video {
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-xl {
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1170,24 +1124,12 @@ video {
     display: none;
   }
 
-  .md\:w-5\/12 {
-    width: 41.666667%;
+  .md\:w-2\/3 {
+    width: 66.666667%;
   }
 
   .md\:w-1\/2 {
     width: 50%;
-  }
-
-  .md\:w-7\/12 {
-    width: 58.333333%;
-  }
-
-  .md\:w-2\/5 {
-    width: 40%;
-  }
-
-  .md\:w-2\/3 {
-    width: 66.666667%;
   }
 
   .md\:text-6xl {
@@ -1197,24 +1139,12 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:left-0 {
-    left: 0px;
+  .lg\:left-3 {
+    left: 0.75rem;
   }
 
   .lg\:left-5 {
     left: 1.25rem;
-  }
-
-  .lg\:right-0 {
-    right: 0px;
-  }
-
-  .lg\:right-3 {
-    right: 0.75rem;
-  }
-
-  .lg\:left-3 {
-    left: 0.75rem;
   }
 
   .lg\:block {
@@ -1231,14 +1161,6 @@ video {
 
   .lg\:h-1\/5 {
     height: 20%;
-  }
-
-  .lg\:w-1\/5 {
-    width: 20%;
-  }
-
-  .lg\:w-3\/5 {
-    width: 60%;
   }
 
   .lg\:w-2\/5 {
